--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "chai": "^4.4.1",
+    "ethers": "^6.10.0",
     "iconsax-react": "^0.0.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "hardhat": "^2.19.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
